<resources>
    <string name="app_name">elogbook</string>
    <string name="action_camera">Kamera</string>
    <string name="action_gallery">Hasil Foto</string>
    <string name="action_drop_db">Drop Db</string>
    <string name="action_network_config">Network Config</string>
    <string name="action_bluetooth_config">Atur Bluetooth</string>
    <string name="action_sync_image">Kirim Foto</string>
    <string name="action_download_model">Download Model</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="image_content_description">Confirm</string>

    <string name="row_index">Nomor</string>
    <string name="species_name">Species</string>
    <string name="gps_location">Location</string>
    <string name="created_at">created at</string>
    <string name="data_status_upload">data_status</string>
    <string name="image_status_upload">image_status</string>
    <string name="accuracy">Accuracy</string>
    <string name="timestamp">Timestamp</string>

</resources>